--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
             <version>2.5.3</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
             <version>1.3.8</version>
@@ -167,11 +173,19 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${project.hibernate.version}</version>
         </dependency>
+        <!--Hibernate4与hibernate-validator4.x不兼容，会抛出异常：org.springframework.validation.beanvalidation.OptionalValidatorFactoryBean#0-->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>4.2.0.Final</version>
+            <version>5.1.0.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
+
         <!--end-->
         <dependency>
             <groupId>javax.validation</groupId>
@@ -248,6 +262,11 @@
 
         <!--log-->
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.3</version>
@@ -274,7 +293,6 @@
         <org.slf4j.version>1.7.16</org.slf4j.version>
         <log4j.version>1.1.4</log4j.version>
     </properties>
-
 
     <build>
         <plugins>
