--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,13 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>classpath:applicationContext.xml</param-value>
     </context-param>
-
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
     <!--spring-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -50,15 +56,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!-- 添加日志监听器 -->
-    <!--<context-param>-->
-    <!--<param-name>logbackConfigLocation</param-name>-->
-    <!--<param-value>classpath:logback.xml</param-value>-->
-    <!--</context-param>-->
-    <!--<listener>-->
-    <!--<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>-->
-    <!--</listener>-->
-    <!--end-->
+
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+
     <!--session-->
     <!--<filter>-->
     <!--<filter-name>springSessionRepositoryFilter</filter-name>-->
