--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework</groupId>-->
-            <!--<artifactId>spring-tx</artifactId>-->
-            <!--<version>4.2.7.RELEASE</version>-->
+        <!--<groupId>org.springframework</groupId>-->
+        <!--<artifactId>spring-tx</artifactId>-->
+        <!--<version>4.2.7.RELEASE</version>-->
         <!--</dependency>-->
 
         <dependency>
@@ -302,6 +302,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
     <properties>
         <org.springframework.version>4.2.7.RELEASE</org.springframework.version>
