--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>4.2.7.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
             <version>4.2.7.RELEASE</version>
         </dependency>
@@ -191,7 +197,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.9</version>
         </dependency>
 
         <!-- StringUtils-->
