--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,4 +77,8 @@
     <!--<dispatcher>ERROR</dispatcher>-->
     <!--</filter-mapping>-->
     <!--end-->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/views/error/404.jsp</location>
+    </error-page>
 </web-app>
