--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ github.all.hooks=https://api.github.com/repos/%s/%s/hooks
 github.base.repo=git@github.com/%s/%s.git
 
 #[监听代码提交事件api][POST]
-cihome.receive.hook=http://xx.xxx.xx.xxx:8080/github/webHooks
+cihome.receive.hook=http://60.205.178.34:8082/github/webHooks
 
 #[jenkins服务地址]
 jenkins.server.host=http://localhost:8888
