--- a/pom.xml
+++ b/pom.xml
@@ -343,5 +343,16 @@
         <org.slf4j.version>1.7.16</org.slf4j.version>
         <log4j.version>1.2.17</log4j.version>
     </properties>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
