--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>4.2.7.RELEASE</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
