--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
-            <scope>provided</scope>
+            <scope>runtime</scope>
         </dependency>
         <!--@Lob org.springframework.web.util.NestedServletException: Handler processing failed; nested exception is java.lang.AbstractMethodError: Method com/mchange/v2/c3p0/impl/NewProxyPreparedStatement.setCharacterStream(ILjava/io/Reader;J)V is abstract-->
         <dependency>
