--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,17 @@ github.base.repo=git@github.com/%s/%s.git
 #[监听代码提交事件api][POST]
 cihome.receive.hook=http://101.236.1.205:8080/github/webHooks
 
+#[OAuth]授权URL
+github.authorize.url=https://github.com/login/oauth/authorize?client_id=%s&state=%s
+
+#[OAuth]Client ID
+github.client.id=040fa54944ee6e64ec78
+
+#[OAuth]Client Secret
+github.client.secret=c99c5508ec12af32595db4ee42f9bb5e0b5e60ac
+
+#[OAuth]获取token
+github.access.token.url=https://github.com/login/oauth/access_token
+
+#[OAuth]获取User信息
+github.user.info.url=https://api.github.com/user
