--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,12 @@ github.all.hooks=https://api.github.com/repos/%s/%s/hooks
 #[GitHub仓库url基本规范][%s/%s: 用户名/代码仓库]
 github.base.repo=git@github.com/%s/%s.git
 
+#[github首页]
+github.user.home=https://github.com/
+
+#[github项目首页]
+github.module.home=https://github.com/%s/%s
+
 #[监听代码提交事件api][POST]
 cihome.receive.hook=http://101.236.1.205:8080/github/webHooks
 
