--- a/src/main/resources/online/application.properties
+++ b/src/main/resources/online/application.properties
@@ -38,7 +38,7 @@ github.access.token.url=https://github.com/login/oauth/access_token
 github.user.info.url=https://api.github.com/user
 
 #home
-pipeline.home=http://localhost:8081
+pipeline.home=http://101.236.1.205:8080
 
 #Swagger描述信息
-swagger.description=api列表
+swagger.description=给美丽大方靠谱的web前端工程师-晨晨
