--- a/src/main/resources/online/application.properties
+++ b/src/main/resources/online/application.properties
@@ -42,3 +42,6 @@ pipeline.home=http://101.236.1.205:8080
 
 #Swagger描述信息
 swagger.description=给美丽大方靠谱的web前端工程师-晨晨
+
+#权限验证开关
+authorization.switch=ON
