--- a/pom.xml
+++ b/pom.xml
@@ -350,21 +350,18 @@
         <!--</dependency>-->
         <!--swagger-->
 
+        <!-- swagger2核心依赖 -->
 
         <dependency>
-            <groupId>com.mangofactory</groupId>
-            <artifactId>swagger-springmvc</artifactId>
-            <version>1.0.2</version>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
         </dependency>
+        <!-- swagger-ui为项目提供api展示及测试的界面 -->
         <dependency>
-            <groupId>com.mangofactory</groupId>
-            <artifactId>swagger-models</artifactId>
-            <version>1.0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.wordnik</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>1.3.11</version>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
         </dependency>
         <!-- swagger-springmvc dependencies -->
         <dependency>
