--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,7 +44,7 @@ pipeline.home=http://localhost:8081
 swagger.description=api列表
 
 #权限验证开关
-authorization.switch=OFF
+authorization.switch=ON
 
 #线下
 env.type=LOCAL
