--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ github.module.home=https://github.com/%s/%s
 cihome.receive.hook=http://101.236.1.205:8080/github/webHooks
 
 #[OAuth]授权URL
-github.authorize.url=https://github.com/login/oauth/authorize?client_id=%s&state=%s
+github.authorize.url=http://localhost:8081/mock/login/oauth/authorize?client_id=%s&state=%s
 
 #[OAuth]Client ID
 github.client.id=040fa54944ee6e64ec78
@@ -32,10 +32,10 @@ github.client.id=040fa54944ee6e64ec78
 github.client.secret=c99c5508ec12af32595db4ee42f9bb5e0b5e60ac
 
 #[OAuth]获取token
-github.access.token.url=https://github.com/login/oauth/access_token
+github.access.token.url=http://localhost:8081/mock/login/oauth/access_token
 
 #[OAuth]获取User信息
-github.user.info.url=https://api.github.com/user
+github.user.info.url=http://localhost:8081/mock/user
 
 #home
 pipeline.home=http://localhost:8081
