--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -2,3 +2,8 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3308/pipeline?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=mysql
+citool.app.db.minPoolSize=5
+citool.app.db.maxPoolSize=100
+citool.app.db.initialPoolSize=5
+citool.app.db.maxIdleTime=595
+citool.app.db.acquireIncrement=2
