--- a/src/main/resources/online/jdbc.properties
+++ b/src/main/resources/online/jdbc.properties
@@ -2,3 +2,13 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/pipeline?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=Pipeline@941207
+
+citool.app.db.minPoolSize=5
+
+citool.app.db.maxPoolSize=100
+
+citool.app.db.initialPoolSize=5
+
+citool.app.db.maxIdleTime=595
+
+citool.app.db.acquireIncrement=2
