后端参数校验 + 历史文件修改

--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "run test"
   },
-  "author": "niuwanpeng",
+  "author": "langshiquan",
   "license": "ISC",
   "devDependencies": {
     "grunt": "^0.4.5",
