--- a/pom.xml
+++ b/pom.xml
@@ -327,29 +327,6 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-        <!-- security -->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.security</groupId>-->
-        <!--<artifactId>spring-security-core</artifactId>-->
-        <!--<version>${security.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.security</groupId>-->
-        <!--<artifactId>spring-security-config</artifactId>-->
-        <!--<version>${security.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.security</groupId>-->
-        <!--<artifactId>spring-security-acl</artifactId>-->
-        <!--<version>${security.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.security</groupId>-->
-        <!--<artifactId>spring-security-taglibs</artifactId>-->
-        <!--<version>${security.version}</version>-->
-        <!--</dependency>-->
-        <!--swagger-->
-
         <!-- swagger2核心依赖 -->
 
         <dependency>
@@ -374,6 +351,13 @@
             <artifactId>classmate</artifactId>
             <version>1.1.0</version>
         </dependency>
+
+        <!-- dubbo -->
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>dubbo</artifactId>-->
+            <!--<version>2.5.3</version>-->
+        <!--</dependency>-->
     </dependencies>
     <properties>
         <org.springframework.version>4.2.7.RELEASE</org.springframework.version>
