--- a/src/main/resources/online/jdbc.properties
+++ b/src/main/resources/online/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pipeline?useUnicode=true&amp;characterEncoding=utf-8
+jdbc.url=jdbc:mysql://101.236.1.205:3306/pipeline?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
 jdbc.password=Pipeline@941207
 
