--- a/src/main/resources/online/jdbc.properties
+++ b/src/main/resources/online/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://101.236.1.205:3306/pipeline?useUnicode=true&amp;characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=Pipeline@941207
+jdbc.password=@Zdh941207
 
 citool.app.db.minPoolSize=5
 
